# Compilers

./: README.md
Final Project/: gui.py
Module I/: 1_automaton.py  2_parse_tree.py  3.1.py  3_intermediate_code.py
Module II/: 1_1_token.py  1_1_tree.py  2_1_syntax_tree.py  3_semantic_automaton.py  4_1_syntactic.py
Module II/Code Generator/: CMakeLists.txt  Code Generator.cbp  Code Generator.depend  Code Generator.layout  genera.cpp  genera.hpp  main.cpp  objeto.txt  test.txt
Module II/Code Generator/include/: genera.hpp
Module II/Code Generator/src/: genera.cpp
Module II/Lexical Analyzer/: CMakeLists.txt  lexical_analyzer.cbp  lexical_analyzer.depend  lexical_analyzer.layout  lexico.cpp  lexico.hpp  main.cpp
Module II/Syntactic Analyzer/: CMakeLists.txt  main.cpp  sintactico.cpp  sintactico.hpp  test.txt
Module II/lexical_analyzer/: lexical_analyzer.cbp  lexical_analyzer.depend  lexical_analyzer.layout  main.cpp  test.txt
Module II/lexical_analyzer/include/: lexico.hpp
Module II/lexical_analyzer/src/: lexico.cpp
Module II/test/: objeto.txt  test.txt
Module III/ARRAYS/: 5_arrays.py  invalid_test.txt  valid_test.txt
Module III/FOR ANALYZER/: 3_for_analyzer.py  invalid_test.txt  valid_test.txt
Module III/IF ANALYZER/: 1_if_analyzer.py  invalid_test.txt  test.txt  valid_test.txt
Module III/NESTED ITERATION/: 4_nested_iteration.py  invalid_test.txt  valid_test.txt
Module III/SWITCH ANALYZER/: 2_switch_analyzer.py  test_invalid.txt  test_valid.txt  valid_test.txt
